--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 $REPO_FOLDER --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 $REPO_FOLDER --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
+        flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 src/ --count --exit-zero --max-complexity=10 --max-line-length=120 --statistics
